--- a/.github/actions/dryrun-templates/action.yml
+++ b/.github/actions/dryrun-templates/action.yml
@@ -3,11 +3,11 @@ runs:
   steps:
     - name: Install Templates
       run: |
-        dotnet new --install ./BepInEx.Templates/templates/
+        dotnet new --install ./UltraModding.Templates/templates/
       shell: bash
         
-    - name: Test BepInEx5 Template
+    - name: Test Bare Plugin Template
       if: always()
       run: |
-        dotnet new bepinex5plugin --dry-run --diagnostics
+        dotnet new ultrakillbareplugin --dry-run --diagnostics
       shell: bash
