--- a/.github/workflows/pack-templates.yml
+++ b/.github/workflows/pack-templates.yml
@@ -32,6 +32,6 @@ jobs:
       - name: Upload Template Package Artifact
         uses: actions/upload-artifact@v4.6.0
         with:
-          path: */nuget/UltraModding.Templates.1.0.0.nupkg
+          path: "*/nuget/UltraModding.Templates.1.0.0.nupkg"
           compression-level: 0
     
