--- a/UltraModding.Templates/UltraModding.Templates.csproj
+++ b/UltraModding.Templates/UltraModding.Templates.csproj
@@ -37,17 +37,17 @@
   </ItemGroup>
   
   <ItemGroup>
+    <Content Include="..\UltraModding.PluginInfoProps\BepInEx.PluginInfoProps.props">
+      <Pack>true</Pack>
+      <PackagePath>content/templates/UltraModding.MinimalPluginTemplate/Properties</PackagePath>
+      <Link>templates\UltraModding.MinimalPluginTemplate\Properties\BepInEx.PluginInfoProps.props</Link>
+    </Content>
     <Content Include="templates\**\*" Exclude="templates\**\bin\**;templates\**\obj\**" />
     <Compile Remove="**\*" />
     <Compile Remove="templates\UltraModding.MinimalPluginTemplate\obj\**" />
     <Content Remove="templates\UltraModding.MinimalPluginTemplate\obj\**" />
     <EmbeddedResource Remove="templates\UltraModding.MinimalPluginTemplate\obj\**" />
     <None Remove="templates\UltraModding.MinimalPluginTemplate\obj\**" />
-    <Content Include="../BepInEx.PluginInfoProps/BepInEx.PluginInfoProps.props">
-      <Pack>true</Pack>
-      <PackagePath>content/templates/UltraModding.MinimalPluginTemplate/Properties</PackagePath>
-      <Link>templates\UltraModding.MinimalPluginTemplate\Properties\BepInEx.PluginInfoProps.props</Link>
-    </Content>
   </ItemGroup>
   
 </Project>
