--- a/UltraModding.Templates/UltraModding.Templates.csproj
+++ b/UltraModding.Templates/UltraModding.Templates.csproj
@@ -1,33 +1,39 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <PackageType>Template</PackageType>
+  <PropertyGroup Label="Package Identity">
+    <PackageId>UltraModding.Templates</PackageId>
     <PackageVersion>1.2.0</PackageVersion>
+    <Authors>BepInEx;10_days_till_xmas</Authors>
+    <PackageTags>BepInEx;Plugin;Template;Ultrakill</PackageTags>
+    <PackageType>Template</PackageType>
+  </PropertyGroup>
+  
+  <PropertyGroup Label="Package Description">
+    <Title>Ultrakill Plugin Templates</Title>
+    <Summary>Plugin templates for Ultrakill using BepInEx.</Summary>
+    <Description>Plugin templates for Ultrakill using BepInEx.</Description>
     <PackageReleaseNotes>
       Initial nuget release. Supports minimal plugin scaffolding for UltraModding.
       - By default, will use the stripped assembly from nuget. This can be overridden if the user provides a path to the Assembly-CSharp.dll of the game
     </PackageReleaseNotes>
-    <PackageId>UltraModding.Templates</PackageId>
-    <Title>Ultrakill Plugin Templates</Title>
-    <Authors>BepInEx;10_days_till_xmas</Authors>
-    <Description>Plugin templates for Ultrakill using BepInEx.</Description>
-    <Summary>Plugin templates for Ultrakill using BepInEx.</Summary>
-    <PackageTags>BepInEx;Plugin;Template;Ultrakill</PackageTags>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
-    <RepositoryUrl>https://github.com/UltraModding/UltraModding.Templates</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageProjectUrl>https://github.com/UltraModding/UltraModding.Templates</PackageProjectUrl>
-    <Copyright>Original (c) 2021 BepInEx; Modified (c) 2025 UltraModding Contributors</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <Copyright>Original (c) 2021 BepInEx; Modified (c) 2025 UltraModding Contributors</Copyright>
   </PropertyGroup>
   
-  <PropertyGroup>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  <PropertyGroup Label="Repository Metadata">
+    <PackageProjectUrl>https://github.com/UltraModding/UltraModding.Templates</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/UltraModding/UltraModding.Templates</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+  </PropertyGroup>
+  
+  <PropertyGroup Label="Build and Packaging">
     <TargetFramework>netstandard2.1</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageOutputPath>$(SolutionDir)nuget</PackageOutputPath>
-    <IncludeContentInPack>true</IncludeContentInPack>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <IncludeBuildOutput>false</IncludeBuildOutput>
+    <IncludeContentInPack>true</IncludeContentInPack>
     <ContentTargetFolders>content</ContentTargetFolders>
     <NoWarn>$(NoWarn);NU5128</NoWarn>
   </PropertyGroup>
@@ -37,17 +43,8 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Content Include="..\UltraModding.PluginInfoProps\BepInEx.PluginInfoProps.props">
-      <Pack>true</Pack>
-      <PackagePath>content/templates/UltraModding.MinimalPluginTemplate/Properties</PackagePath>
-      <Link>templates\UltraModding.MinimalPluginTemplate\Properties\BepInEx.PluginInfoProps.props</Link>
-    </Content>
     <Content Include="templates\**\*" Exclude="templates\**\bin\**;templates\**\obj\**" />
     <Compile Remove="**\*" />
-    <Compile Remove="templates\UltraModding.MinimalPluginTemplate\obj\**" />
-    <Content Remove="templates\UltraModding.MinimalPluginTemplate\obj\**" />
-    <EmbeddedResource Remove="templates\UltraModding.MinimalPluginTemplate\obj\**" />
-    <None Remove="templates\UltraModding.MinimalPluginTemplate\obj\**" />
   </ItemGroup>
   
 </Project>
