--- a/UltraModding.PluginInfoProps/UltraModding.PluginInfoProps.props
+++ b/UltraModding.PluginInfoProps/UltraModding.PluginInfoProps.props
@@ -1,10 +1,13 @@
 <Project>
-    <Target Name="AddGeneratedFile" BeforeTargets="BeforeCompile;CoreCompile" Inputs="$(MSBuildAllProjects)" Outputs="$(IntermediateOutputPath)GeneratedFile.cs">
-        <PropertyGroup>
-            <PluginGuid Condition="'$(PluginGuid)' == ''">$(GUID)</PluginGuid>
-            <PluginName Condition="'$(PluginName)' == ''">$(Product)</PluginName>
-            <PluginVersion Condition="'$(PluginVersion)' == ''">$(Version)</PluginVersion>
-            <GeneratedText><![CDATA[
+  <Target Name="AddGeneratedFile" BeforeTargets="BeforeCompile;CoreCompile" 
+          Inputs="$(MSBuildAllProjects)" Outputs="$(IntermediateOutputPath)GeneratedFile.cs">
+    <Warning Text="This package is deprecated. Reference the UltraModding.PluginInfoGenerator package instead" />
+    
+    <PropertyGroup>
+      <PluginGuid Condition="'$(PluginGuid)' == ''">$(GUID)</PluginGuid>
+      <PluginName Condition="'$(PluginName)' == ''">$(Product)</PluginName>
+      <PluginVersion Condition="'$(PluginVersion)' == ''">$(Version)</PluginVersion>
+      <GeneratedText><![CDATA[
 namespace $(RootNamespace)%3B
 
 internal static class MyPluginInfo
@@ -13,15 +16,14 @@ internal static class MyPluginInfo
     public const string PLUGIN_NAME = "$(PluginName)"%3B
     public const string PLUGIN_VERSION = "$(PluginVersion)"%3B
 }
-
       ]]></GeneratedText>
-            <GeneratedFilePath>$(IntermediateOutputPath)MyPluginInfo.cs</GeneratedFilePath>
-        </PropertyGroup>
-        <ItemGroup>
-            <Compile Include="$(GeneratedFilePath)" />
-            <FileWrites Include="$(GeneratedFilePath)" />
-        </ItemGroup>
-        <WriteLinesToFile Lines="$(GeneratedText)" File="$(GeneratedFilePath)" WriteOnlyWhenDifferent="true" Overwrite="true" />
-        <Warning Condition="'$(GUID)' == ''" Text="$(AssemblyName).csproj doesnt contain a &lt;GUID&gt; tag"  />
-    </Target>
+      <GeneratedFilePath>$(IntermediateOutputPath)MyPluginInfo.cs</GeneratedFilePath>
+    </PropertyGroup>
+    <ItemGroup>
+      <Compile Include="$(GeneratedFilePath)" />
+      <FileWrites Include="$(GeneratedFilePath)" />
+    </ItemGroup>
+    <WriteLinesToFile Lines="$(GeneratedText)" File="$(GeneratedFilePath)" WriteOnlyWhenDifferent="true" Overwrite="true" />
+    <Warning Condition="'$(GUID)' == ''" Text="$(AssemblyName).csproj doesnt contain a &lt;GUID&gt; tag"  />
+  </Target>
 </Project>
